# jde

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp
src/include/jde/: all.hpp  file.hpp  functional.hpp  itertools.hpp  metaprogramming.hpp  predicate.hpp  variant.hpp
src/jde/: concepts.hpp  file.hpp  format.hpp  hash.hpp  itertools.hpp  metaprogramming.hpp  predicate.hpp  variant.hpp
src/jde/include/: concepts.hpp  predicate.hpp
test/: test.cpp
